--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,96 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* GLOBAL */
+h1 {
+  margin-bottom: 30px !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form-control,
+.form-select {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.form-label {
+  font-size: 18px;
+  color: #000;
+  font-weight: bold;
+}
+
+.btn {
+  outline: none !important;
+  box-shadow: none !important;
+  background-color: #076bc9 !important;
+  border: none !important;
+}
+
+.red-btn {
+  background-color: #d60031 !important;
+}
+
+.navbar {
+  background-color: #076bc9 !important;
+  margin-bottom: 80px;
+}
+
+.nav-link {
+  margin: 0 20px;
+}
+
+.card {
+  margin-top: 50px;
+  font-size: 20px;
+}
+
+/* LOGIN PAGE */
+.login-page-wrapper {
+  background-color: #076bc9;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-page-wrapper form {
+  width: 550px;
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 20px;
+}
+
+.login-page-wrapper form h2 {
+  text-align: center;
+  font-weight: bold;
+}
+
+.user-page-footer {
+  position: absolute;
+  left: 0;
+  bottom: 100px;
+  right: 0;
+}
+
+.user-page-footer .btn:first-child {
+  margin-right: 30px;
+}
+
+/* TASK PAGE */
+.add-task-btn {
+  margin-bottom: 30px;
+  float: right;
+}
+
+/* ERROR PAGE */
+
+.error-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #076bc9;
+  color: #fff;
+}
+
+.error-page h1 {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 60px;
 }
